tests/snapshots/cargo_leet__tool__core__helpers__problem_description__tests__extract_solutions_from_description.snap
---
source: src/tool/core/helpers/problem_description.rs
assertion_line: 102
expression: problem_description.get_solutions()
---
[
    "[0,1]",
    "[1,2]",
    "[0,1]",
]
