tests/snapshots/cargo_leet__tool__core__helpers__problem_description__tests__solutions add-two-numbers.snap
---
source: src/tool/core/helpers/problem_description.rs
expression: problem_description.get_solutions()
---
[
    "[7,0,8]",
    "[0]",
    "[8,9,9,9,0,0,0,1]",
]
