tests/snapshots/cargo_leet__tool__core__helpers__problem_description__tests__solutions construct-smallest-number-from-di-string.snap
---
source: src/tool/core/helpers/problem_description.rs
expression: problem_description.get_solutions()
---
[
    "123549876",
    "4321",
]
